<resources>
    <string name="app_name">AutoWorld</string>
    <string name="darkMode">Dark Mode</string>
    <string name="lightMode">Light Mode</string>
    <string name="settings">Settings</string>
    <string name="mainMenu">Main menu</string>
    <string name="update">Update</string>
    <string name="pics_data">Pics/TC</string>
    <string name="power">Power, hp</string>
    <string name = "torque">Torque, N/M</string>
    <string name="model">Model</string>
    <string name="volume">Volume, cc</string>
    <string name="backButt">Back</string>

</resources>