<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Template">

    <EditText
        android:id="@+id/editModel"
        android:layout_width="159dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/editPower"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editPower"
        android:layout_width="159dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/editTorque"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTorque"
        android:layout_width="159dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/editVolume"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editVolume"
        android:layout_width="159dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switchPTC"
        android:layout_width="127dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/pics_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="165dp"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/model"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="99dp" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="165dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/volume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="167dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/power"
        app:layout_constraintBottom_toTopOf="@+id/editText11"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="165dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/torque"
        app:layout_constraintBottom_toTopOf="@+id/editText9"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/backButt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>